styles/graphic.sass
@mixin fulllayer
  position: absolute
  top: 0
  left: 0
  bottom: 0
  right: 0

.you-draw-it
  margin: 30px 0 50px 0
  position: relative
  overflow: hidden

  #gradient-black
    .start
      stop-color: $black
      stop-opacity: $gradient-opacity
    .end
      stop-color: $black
      stop-opacity: 0

  #gradient-red
    .start
      stop-color: $red
      stop-opacity: $gradient-opacity
    .end
      stop-color: $red
      stop-opacity: 0

  clipPath
    rect
      transition: width $clippath-animation-duration

  .axis
    opacity: .5

  .line
    fill: none
    stroke-width: 3

    &.black
      stroke: $black

    &.red
      stroke: $red

  .area
    &.black
      fill: url(#gradient-black)
    &.red
      fill: url(#gradient-red)

  .dots
    circle
      transition: opacity 0.3s

      &.median
        cursor: pointer

      &.black
        fill: $black

      &.red
        fill: $red

  .labels
    @include fulllayer
    pointer-events: none

    .data-label
      position: absolute
      transition: opacity 0.3s

      span
        position: relative
        margin-top: -43px
        left: -50%
        padding: 5px 15px
        color: white
        display: block
        text-align: center
        line-height: 16px
        white-space: nowrap

      &:after
        border: solid transparent
        content: " "
        height: 0
        width: 0
        position: absolute
        pointer-events: none
        border-color: rgba(136, 183, 213, 0)
        border-width: 12px 6px
        margin-left: -6px

      &.black
        span
          background-color: $black
        &:after
          border-top-color: $black

      &.red
        span
          background-color: $red
        &:after
          border-top-color: $red

  .titles
    @include fulllayer
    pointer-events: none
    padding-top: 20px

    span
      display: block
      position: absolute
      text-align: center
      text-transform: uppercase
      white-space: pre-line
      line-height: 1.5
      font-size: 14px

  .controls
    @include fulllayer
    pointer-events: none
    text-align: center
    color: #696969

    .qm
      font-size: 153px
      margin-top: 80px

    .box
      margin-top: 20px
      display: inline-block
      border: 2px dotted #696969
      padding: 10px

  .grid
    .domain
      stroke-width: 0

    .tick line
      stroke-dasharray: 1,1
      opacity: 0.2

      &.highlight
        opacity: 0.7

  .draggable
    cursor: pointer

  .your-line, .preview-line
    stroke-width: 4
    stroke-dasharray: 1 7
    stroke-linecap: round
    fill: none

  .your-line
    stroke: $wdr-blue

  .preview-line
    opacity: 0
    stroke: #aaaaaa
    marker-end: url(#preview-arrow)

  &:hover .preview-line
    opacity: 1

.drawn
  .controls
    display: none

  &:hover .preview-line
    opacity: 0

#preview-arrow
  path
    fill: #aaaaaa

